# lib/units/api/controllers/user.js
@@ -24,12 +24,64 @@ module.exports = {
 , remoteDisconnectUserDeviceBySerial: remoteDisconnectUserDeviceBySerial
 , getUserAccessTokens: getUserAccessTokens
 , addAdbPublicKey: addAdbPublicKey
+, getUsers
+, updateUserDevice
 }
 
 function getUser(req, res) {
   res.json({
     success: true
   , user: req.user
+  })
+}
+
+function getUsers(req, res) {
+  dbapi.getUsersNotAdmin().then(cursor => {
+    return Promise.promisify(cursor.toArray, cursor)()
+      .then(function(list) {
+        let users = []
+
+        list.map(item => {
+          users.push({
+            email: item.email,
+            name: item.name
+          })
+        })
+        res.json({
+          success: true
+          , data: users
+        })
+      })
+  })
+}
+
+function updateUserDevice(req, res) {
+  let {
+    serial,
+    email
+  } = req.body
+  dbapi.getUserBySerial(serial).then(cursor => {
+    return Promise.promisify(cursor.toArray, cursor)()
+      .then(function(list) {
+        if (list.length) {
+          let user = list[0]
+          let devices = user.devices
+          let index = devices.indexOf(serial)
+          devices.splice(index, 1)
+          dbapi.updateUserDeviceByEmail(user.email, devices)
+        }
+      })
+  })
+
+  dbapi.getUserByEmail(email).then(user => {
+    let devices = user.devices
+    if (serial) {
+      devices.push(serial)
+      dbapi.updateUserDeviceByEmail(email, devices)
+    }
+    res.json({
+      success: true
+    })
   })
 }
 
